--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc --noEmit --skipLibCheck && vite build ",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,10 +16,12 @@
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.0",
     "@types/crypto-js": "^4.1.1",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^18.16.17",
+    "@types/node": "^18.17.1",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/tsconfig": "^0.4.0",
     "highlight.js": "^11.7.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
