--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,14 +28,17 @@
 //   "references": [{ "path": "./tsconfig.node.json" }]
 // }
 {
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "include": ["env.d.ts","src/**/*.ts","src/**/*.tsx", "src/**/*.d.ts", "src/**/*.vue"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     },
+    "moduleResolution": "node",
     "resolveJsonModule": true,
-    "lib": ["ESNext", "DOM"]
+    "lib": ["ESNext", "DOM"],
+    "esModuleInterop": true,
+    "module": "ESNext",
   },
 
   "references": [
